@@ -435,6 +435,7 @@ const float JET_JVF_CUT      = 0.5;
 //const float JET_JVF_CUT_2L   = 0.2;  
 const float JET_JVF_CUT_2L   = 0.0;  
 const float JET_JVF_PT       = 50;  
+const float JET_JVF_ETA      = 2.4;  
 const float JET_PT_L25_CUT   = 25;
 const float JET_PT_L20_CUT   = 20;
 const float JET_PT_B20_CUT   = 20;
